[gd_scene load_steps=22 format=3 uid="uid://cfwonmudh1bsj"]

[ext_resource type="Script" uid="uid://cf6n55vimllw8" path="res://player.gd" id="1_4flbx"]
[ext_resource type="PackedScene" uid="uid://vidg5q56eeo0" path="res://sleigh.tscn" id="2_onrkg"]
[ext_resource type="Script" uid="uid://boukqy7e6y8ds" path="res://trick_system.gd" id="3_i3pqv"]
[ext_resource type="Texture2D" uid="uid://cwqcsvysvixr4" path="res://1.png" id="4_hqtel"]
[ext_resource type="AudioStream" uid="uid://dqc1h3pry062l" path="res://audio/trick.mp3" id="5_sweqy"]
[ext_resource type="AudioStream" uid="uid://dgt0o7ssivlxn" path="res://audio/retro-game-sfx_jump-bumpwav-14853.mp3" id="6_1jxqw"]
[ext_resource type="AudioStream" uid="uid://cym2bwbty68kv" path="res://audio/land2-43790.mp3" id="7_dw050"]
[ext_resource type="AudioStream" uid="uid://d1kvo76ujj7gn" path="res://audio/death2.mp3" id="8_dw050"]
[ext_resource type="AudioStream" uid="uid://bi54hvjti3bax" path="res://addons/rlaunch.wav" id="9_b26j0"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_onrkg"]
size = Vector2(40, 42)

[sub_resource type="Animation" id="Animation_hqtel"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_i3pqv"]
resource_name = "intro"
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.0666667, 1.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0.00184107, 0.00184107, 0.00184107, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_hqtel"]
_data = {
&"RESET": SubResource("Animation_hqtel"),
&"intro": SubResource("Animation_i3pqv")
}

[sub_resource type="CanvasTexture" id="CanvasTexture_hqtel"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_hqtel"]
particles_animation = true
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="Curve" id="Curve_hqtel"]
_data = [Vector2(0, 0.5), 0.0, 0.714286, 0, 1, Vector2(0.7, 1), 0.0, 0.0, 0, 0, Vector2(1, 0.5), -1.66667, 0.0, 1, 0]
point_count = 3
metadata/_snap_enabled = true

[sub_resource type="Gradient" id="Gradient_sweqy"]
colors = PackedColorArray(0.388235, 0, 0, 1, 1, 1, 1, 0.647059)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_2hs0m"]
gradient = SubResource("Gradient_sweqy")
fill_from = Vector2(0.427184, 0.184466)
fill_to = Vector2(1, 0.669903)

[sub_resource type="Animation" id="Animation_2hs0m"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:points")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [PackedVector2Array(-21, -22, -25.9576, -21.0085, -31, -20, -38, -21, -45, -27, -50, -21, -56, -21, -59, -16, -66, -16)]
}

[sub_resource type="Animation" id="Animation_sweqy"]
resource_name = "scarf"
length = 3.0
loop_mode = 1
capture_included = true
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:points")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.733333, 1.46667, 2.16667, 3),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 2,
"values": [PackedVector2Array(-21, -22, -25.9576, -21.0085, -31, -20, -38, -21, -45, -27, -50, -21, -56, -21, -59, -16, -66, -16), PackedVector2Array(-21, -22, -25.9576, -21.0085, -31, -20, -36.5001, -18.2114, -40.2707, -26.6517, -49.1606, -28.3853, -57.4281, -24.2243, -61.4613, -12.95, -67.464, -6.545), PackedVector2Array(-21, -22, -25.9576, -21.0085, -31, -20, -35.5412, -16.4286, -37.247, -26.429, -48.624, -33.107, -58.3412, -26.2857, -63.035, -11, -68.4, -0.5), PackedVector2Array(-21, -22, -25.9576, -21.0085, -31, -20, -36.5001, -18.2114, -40.2707, -26.6517, -49.1606, -28.3853, -57.4281, -24.2243, -61.4613, -12.95, -67.464, -6.545), PackedVector2Array(-21, -22, -25.9576, -21.0085, -31, -20, -38, -21, -45, -27, -50, -21, -56, -21, -59, -16, -66, -16)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_1jxqw"]
_data = {
&"RESET": SubResource("Animation_2hs0m"),
&"scarf": SubResource("Animation_sweqy")
}

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1_4flbx")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
modulate = Color(0, 1, 1, 1)
position = Vector2(0, -8)
shape = SubResource("RectangleShape2D_onrkg")

[node name="Sleigh" parent="CollisionShape2D" instance=ExtResource("2_onrkg")]
position = Vector2(-20, 20)

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(0, -8)

[node name="TrickSystem" type="Node2D" parent="."]
script = ExtResource("3_i3pqv")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_hqtel")
}

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(-0.499265, -9.46065)
rotation = -1.57003
scale = Vector2(40.3088, 41)
texture = SubResource("CanvasTexture_hqtel")

[node name="ColorRect" type="ColorRect" parent="Sprite2D"]
modulate = Color(0.654232, 0.654232, 0.654232, 1)
material = SubResource("CanvasItemMaterial_hqtel")
offset_left = 0.178999
offset_top = -0.500178
offset_right = 1.179
offset_bottom = 1.49982
rotation = -0.00144836
scale = Vector2(0.217794, 0.502758)
color = Color(1, 0, 0, 1)

[node name="1" type="Sprite2D" parent="."]
modulate = Color(0.907942, 0.907942, 0.907942, 1)
self_modulate = Color(0.89059, 0.89059, 0.89059, 1)
position = Vector2(-7.62939e-06, 18)
scale = Vector2(2.56035, 1.75)
texture = ExtResource("4_hqtel")

[node name="Scarf" type="Line2D" parent="."]
modulate = Color(0.556953, 0.556953, 0.556953, 1)
z_index = 2
position = Vector2(8, 7)
scale = Vector2(1.49123, 1.21739)
points = PackedVector2Array(-21, -22, -25.9576, -21.0085, -31, -20, -38, -21, -45, -27, -50, -21, -56, -21, -59, -16, -66, -16)
width = 6.0
width_curve = SubResource("Curve_hqtel")
default_color = Color(1, 0, 0, 1)
texture = SubResource("GradientTexture2D_2hs0m")
texture_mode = 2
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2

[node name="scarfAnimator" type="AnimationPlayer" parent="Scarf"]
libraries = {
&"": SubResource("AnimationLibrary_1jxqw")
}

[node name="TrickCompleteSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_sweqy")

[node name="JumpSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_1jxqw")

[node name="LandSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_dw050")

[node name="DeathSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8_dw050")

[node name="dashSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("9_b26j0")
